--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prism-theme-vars": "^0.2.2",
     "vue": "^3.2.33",
     "vue-demi": "^0.12.5",
+    "vue-gtag": "^2.0.1",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.15"
   },
